assets/css/main.css
html { position: relative; }

a { text-decoration: none; }

@font-face { font-family: '8bitOperatorPlus-Bold'; src: url("/assets/fonts/8bitOperatorPlus-Bold.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/8bitOperatorPlus-Bold.woff") format("woff"), url("/assets/fonts/8bitOperatorPlus-Bold.ttf") format("truetype"), url("/assets/fonts/8bitOperatorPlus-Bold.svg#8bitOperatorPlus-Bold") format("svg"); font-weight: normal; font-style: normal; }

@font-face { font-family: '8bitOperatorPlus-Regular'; src: url("/assets/fonts/8bitOperatorPlus-Regular.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/8bitOperatorPlus-Regular.woff") format("woff"), url("/assets/fonts/8bitOperatorPlus-Regular.ttf") format("truetype"), url("/assets/fonts/8bitOperatorPlus-Regular.svg#8bitOperatorPlus-Bold") format("svg"); font-weight: normal; font-style: normal; }

body { background-color: black; margin-bottom: 60px; color: #ffffff; font-family: "8bitOperatorPlus-Bold", monospace; }

@media screen and (max-width: 767px) { body { margin-bottom: 140px; } }

h1, h2, h3, h4, h5, h6, strong { font-weight: normal; margin: 0; }

h2 { font-size: 36px; margin-top: 5px; }

h3 { font-size: 22px; letter-spacing: -0.7; margin-bottom: 10px; }

h4 { font-size: 16px; letter-spacing: 3; margin-top: 20px; margin-bottom: 20px; }

h6 { font-size: 12px; margin-bottom: 5px; letter-spacing: -0.5; }

.mt { margin-top: 2rem; }

.mt-big { margin-top: 8rem; }

.mb { margin-bottom: 2rem; }

.mb-big { margin-bottom: 8rem; }

.red { color: #FF2020 !important; }

.yellow { color: #F9FF10 !important; }

.green { color: #00ff00; }

.green:hover { color: #00dd00 !important; }

img.small-img { height: 12px; width: 12px; }

.screenshot-container { aspect-ratio: 4/3; max-width: 640px; margin-left: auto; margin-right: auto; margin-bottom: 4rem; }

.screenshot-container figcaption { margin-top: 1rem; }

.screenshot { image-rendering: pixelated; }

.music-embed { text-align: center; }

.music-embed figcaption { margin-top: 1rem; }

.music-embed figcaption.figtitle { margin-bottom: 1rem; }

.music-embed .dog-player { display: flex; justify-content: center; }

.music-embed .dog-player .dog { display: inline-block; }

.music-embed .dog-player .dog-playing { display: none; }

.music-embed .dog-player .dog, .music-embed .dog-player .dog-playing { image-rendering: pixelated; margin-right: 10px; cursor: pointer; object-fit: contain; }

.music-embed .dog-player.playing .dog { display: none; }

.music-embed .dog-player.playing .dog-playing { display: inline-block; }

nav.navbar { background-color: #42136d; border-radius: 0; border: none; max-height: 50px; }

@media screen and (max-width: 767px) { nav.navbar { max-height: 1000px; } nav.navbar .container { margin-top: 54px; } }

nav > .flags { position: absolute; right: 0; top: 0; list-style: none; padding-left: 0; margin-bottom: 0; }

nav > .flags li { display: inline-block; padding-right: 10px; }

nav > .flags li a, nav > .flags li img { padding: 12px 0; }

@media screen and (max-width: 767px) { nav > .flags li a, nav > .flags li img { padding: 14px 0; } }

nav > .flags li a:hover, nav > .flags li img:hover { opacity: 0.9; }

.nav > li > a, footer a { color: white; text-shadow: 0 2px #000000; font-size: 18px; padding: 15px 0; }

.nav > li > a:hover, .footer a:hover, .nav > li > a:focus, .footer a:focus { color: #d5d3f4; text-decoration: none; background-color: inherit; }

#top_nav .nav-justified { padding: 0; }

@media screen and (min-width: 992px) { #top_nav .nav-justified { padding: 0 90px; } }

@media screen and (min-width: 1200px) { #top_nav .nav-justified { padding: 0 180px; } }

.navbar-toggle { float: left; margin: 4px 0 0 0; padding: 14px; }

.navbar-toggle .menu-text { color: white; text-shadow: 0 2px #000000; float: left; padding-left: 40px; padding-top: 6px; font-size: 20px; line-height: 0.1; }

.navbar-toggle .icon-bar { padding-top: 3px; background-color: white; box-shadow: 0 2px #000000; }

.wrapper { margin-top: 20px; padding-bottom: 50px; }

.main { text-align: center; }

.main .row { margin-top: 15px; }

.main .no-margin { margin: 0; }

#logo { margin-top: 20px; margin-bottom: 0; padding: 0; }

#logo img { margin: 0 auto; }

@media screen and (max-width: 767px) { #logo img { padding-left: 30px; padding-right: 30px; } }

@media screen and (min-width: 768px) { #logo img { padding-left: 48px; padding-right: 40px; } }

@media screen and (min-width: 992px) { #logo img { padding-left: 0px; padding-right: 0px; } }

@media screen and (min-width: 1200px) { #logo img { padding-left: 60px; padding-right: 54px; } }

#subtitle { margin-top: 15px; text-transform: uppercase; padding: 0; font-size: 32px; }

@media screen and (max-width: 991px) { #subtitle { padding: 0 15px; } }

@media screen and (max-width: 767px) { #subtitle { font-size: 18px; } }

#home_logo { padding-top: 180px; }

@media screen and (min-width: 768px) { #home_logo { padding-top: 360px; } }

#background { background: url("/assets/images/main/bg.png"); position: absolute; width: 100%; height: 100%; z-index: -2; display: block; top: 40px; background-repeat: no-repeat; background-position: center top; box-shadow: 0 60px 80px 0px black inset; text-align: center; overflow: hidden; animation: fadeIn 2s ease-out; -webkit-animation: fadeIn 2s ease-out; -moz-animation: fadeIn 2s ease-out; }

#bottom_bg { position: absolute; z-index: -1; left: 0; right: 0; margin-bottom: -38px; height: 308px; background: url("/assets/images/main/bottom_bg.png"); background-repeat: repeat-x; background-position: bottom; }

@media screen and (max-width: 768px) { #background { background-size: 500px; } }

@media screen and (max-width: 768px) { #background #bottom_bg { display: none; } }

#download .row { margin-top: 18px; }

@media screen and (min-width: 768px) { #download .row div:first-child { text-align: right; } }

@media screen and (min-width: 768px) { #download .row div:last-child { text-align: left; } }

#download .col-sm-3 { padding: 0 5px; }
/* ... */

